fix code block selections showing up in lang/collapse tooltip

--- a/packages/renderer/src/components/Views/Editor/styles.scss
+++ b/packages/renderer/src/components/Views/Editor/styles.scss
@@ -200,6 +200,7 @@ ul[data-type="taskList"] {
 
 .code-language {
     position: absolute;
+    user-select: none !important;
     right: 16px;
     font-size: 13px;
     background-color: inherit;
